17 jun 2019
   - initiele upload
1 juli 2019
   - aanpassing naamgeving proeven-metingen AP
   - aanpasisngen aan templates
   - versie 22 van OTL
9 juli 2019
   - versie 23 van OTL
   - update van afbeeldingen (PDF en JPG)
   - update van codelijsten
   - complexe datatypes toegevoegd
19 juli 2019
   - versie 24 van de OTL  
22 juli 2019
   - versie 25 van de OTL  