@@ -13,3 +13,5 @@
    - versie 24 van de OTL  
 22 juli 2019
    - versie 25 van de OTL  
+22 juli 2019
+   - versie 25 van de OTL, eap-mapping.json opnieuw opgebouwd.  
